tests/ui/lang-items/start_lang_item_args.argc.stderr
error: parameter 2 of the `start` lang item is incorrect
  --> $DIR/start_lang_item_args.rs:75:38
   |
LL | fn start<T>(_main: fn() -> T, _argc: i8, _argv: *const *const u8, _sigpipe: u8) -> isize {
   |                                      ^^ help: change the type from `i8` to `isize`

error: aborting due to previous error

